--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>SensorPod™ | Hybrid Autonomy & Teledrive</title>
-  <meta name="description" content="Investor & NIDHI-SSP ready platform for Hybrid Autonomy and Teledrive." />
+  <meta name="description" content="ready platform for Hybrid Autonomy and Teledrive." />
   <style>
     body { margin: 0; font-family: Arial, Helvetica, sans-serif; background: #0b0f19; color: #e6e9f0; }
     header { padding: 90px 20px; text-align: center; background: linear-gradient(135deg, #020617, #111827); }
@@ -31,7 +31,7 @@
 </header>
 
 <section>
-  <h2>Why This Matters (Investor / NIDHI View)</h2>
+  <h2>Why This Matters Investor View</h2>
   <p>Transportation today is unsafe, inefficient, and over-dependent on human drivers. Driver shortages, fatigue-related accidents, and hazardous environments limit scalability, while full autonomy is not yet deployable in real-world Indian conditions.</p>
 </section>
 
@@ -84,7 +84,7 @@
 <footer>
   <p><strong>Vision:</strong> To remove human risk from mobility.</p>
   <p><strong>Mission:</strong> Build safe, scalable hybrid autonomy with human-in-the-loop control.</p>
-  © 2025 SensorPod™ | Investor & NIDHI-SSP Ready
+  © 2025 SensorPod™ 
 </footer>
 
 </body>
